Fix for list elements not visible on iOS

--- a/src/app/shared/components/fy-select/fy-select-modal/fy-select-modal.component.scss
+++ b/src/app/shared/components/fy-select/fy-select-modal/fy-select-modal.component.scss
@@ -40,6 +40,7 @@ $list-element-color: #333;
 
   &--container {
     @extend %flex-layout-column;
+    color: $blue-black;
   }
 
   &--bottom-up {
