--- a/src/app/shared/components/fy-select/fy-select.component.scss
+++ b/src/app/shared/components/fy-select/fy-select.component.scss
@@ -32,7 +32,6 @@
     border: none;
     width: 100%;
     padding: 0;
-    caret-color: transparent;
   }
 
   &--input-invalid {
